test/conformance/chainsaw/generating-policies/data/sync/sync-modify-downstream/downstream-modified.yaml
apiVersion: v1
data:
  KAFKA_ADDRESS: hereissomenewdataichanged
  ZK_ADDRESS: 192.168.10.10:2181,192.168.10.11:2181,192.168.10.12:2181
kind: ConfigMap
metadata:
  name: data-sync-modify-downstream
  namespace: data-sync-modify-downstream
