test/conformance/chainsaw/generating-policies/data/sync/sync-modify-downstream/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-sync-modify-downstream
